--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            Blog Title
-description:      Describe your website here.
+title:            Fun with SODA
+description:      Blog about having fun with the Socrata Open Data API
 disqus_shortname: neohpstrtheme # put your disqus here
 reading_time:     true # if true, shows the estimated reading time for a post
 words_per_minute: 200
@@ -54,7 +54,7 @@ owner:
 
 social:
   - title: "github"
-    url: "https://github.com/aron-bordin"
+    url: "https://github.com/funwithsoda"
   - title: "linkedin"
     url: "https://br.linkedin.com/in/aronbordin"
   - title: "youtube"
