--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ owner:
   bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
   email:          you@email.com
   # Social networking links used in footer. Update and remove as you like.
-  twitter: aron_bordin # if no twitter in this config, the twitter follow button will be removed
+  twitter: funwithsoda # if no twitter in this config, the twitter follow button will be removed
   facebook:
   github: aron-bordin
   stackexchange:
